--- a/JavaScriptElearning/WebContent/view/singUp.html
+++ b/JavaScriptElearning/WebContent/view/singUp.html
@@ -1,4 +1,5 @@
 <div class="panel-login text-center">
+	<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
 	<form name="singUpForm" class="col-sm-12 text-center">
 		<p class="row">
 			Name:
