refactoring andadd lessonblock

--- a/JavaScriptElearning/WebContent/view/editor.html
+++ b/JavaScriptElearning/WebContent/view/editor.html
@@ -11,7 +11,7 @@
 				{{lesson.path_title}}
 			</div>
 			<div class="lesson-left-bar-wraper">
-				<h3>{{lesson.lesson_title}}</h3>
+				<h3>{{lesson.title}}</h3>
 				<div class="lesson-left-bar-article">
 					{{lesson.article}}
 				</div>
