--- a/JavaScriptElearning/WebContent/view/paths.html
+++ b/JavaScriptElearning/WebContent/view/paths.html
@@ -6,8 +6,8 @@
 		<div class="grid-col-12">
 			<h2>Language Skills</h2>
 			<p>Learn core programming concepts and syntax for the world's most popular languages.</p>
-			<div class="grid-row" ng-init="getAllPath()">
-				<path-card-directive ng-repeat="pathCard in pathCards" path="pathCard" ng-click="redirectToLessons(pathCard.id)"></path-card-directive>
+			<div class="grid-row" ng-init="getAllPaths()">
+				<path-card-directive ng-repeat="pathCard in pathCards" path="pathCard" ng-click="redirectToLessonsBlocks(pathCard.id)"></path-card-directive>
 			</div>
 		</div>
 	</div>
