--- a/JavaScriptElearning/WebContent/view/videoTemplate.html
+++ b/JavaScriptElearning/WebContent/view/videoTemplate.html
@@ -5,6 +5,7 @@
 		<div class="grid-col-12">
 			<h2>Video - {{lesson.video.name}}</h2>
 			<div ng-bind-html="player"></div>
+			<button class="btn btn-default " ng-click="redirectToNextLesson()">Nastepna lekcja</button>
 		</div>
 	</div>
 </html>
