--- a/JavaScriptElearning/WebContent/view/editorTemplate.html
+++ b/JavaScriptElearning/WebContent/view/editorTemplate.html
@@ -30,7 +30,7 @@
 						<div class="btn-default reset-button" ng-click="clearEditor(tab.content)">Clear</div>
 					</div>
 					<div id="result" class="lesson-right-bar">
-						RESULT
+						<h4 class="text-center">RESULT</h4>
 					</div>
 				</uib-tab>
 			</uib-tabset>				
