--- a/JavaScriptElearning/WebContent/view/editorTemplate.html
+++ b/JavaScriptElearning/WebContent/view/editorTemplate.html
@@ -12,8 +12,7 @@
 			</div>
 			<div class="lesson-left-bar-wraper">
 				<h3>{{lesson.title}}</h3>
-				<div class="lesson-left-bar-article">
-					{{lesson.article}}
+				<div class="lesson-left-bar-article" ng-bind-html="lesson.article">
 				</div>
 				<div class="lesson-left-bar-instruction">
 					<div class="instruction-header">Instrukcja</div>
