--- a/JavaScriptElearning/WebContent/view/home.html
+++ b/JavaScriptElearning/WebContent/view/home.html
@@ -2,20 +2,10 @@
 <html>
 	<banner-directive name="banner.jpg"></banner-directive>
 	<div class="panel-default text-center">
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		<p>This is home page.</p>
-		This is home page.
+		<h1>E-learning</h1>
+		<p>Witam</p>
+		<p>Strona ta dedykowana jest nauce języków programowania, to co czyni ją inną od innych tego typu stron jest dodatkowe rozpoznawanie emocji uczestnika kursu.</p>
+		<p>Podczas rozwiązywania zadań aplikacja pobiera informacje o dynamice naciskania klawiszy oraz ruchów myszy. Na tej podstawie wyznaczane są
+			emocje, które mają wpływ na efektywnośc procesu nauczania. </p>
 	</div>
 </html>
