--- a/JavaScriptElearning/WebContent/view/menu.html
+++ b/JavaScriptElearning/WebContent/view/menu.html
@@ -8,10 +8,10 @@
 		</li>
 	</ul>
 	 <ul class="nav navbar-nav navbar-right" ng-show="!isUserLoged()">
-      <li><a href="#/singUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="#/singUp"><span class="glyphicon glyphicon-user"></span> Zarejestruj</a></li>
+      <li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Zaloguj</a></li>
     </ul>
      <ul class="nav navbar-nav navbar-right" ng-show="isUserLoged()">
-      <li><a href="" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+      <li><a href="" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Wyloguj</a></li>
     </ul>
 </header>	
