add admin and weka model learn

--- a/JavaScriptElearning/WebContent/view/editorContent.html
+++ b/JavaScriptElearning/WebContent/view/editorContent.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<pre id="editor"></pre>
+	<pre id="editor" onpaste="return false" onCopy="return false" onDrag="return false" onDrop="return flase" autocomplete=off></pre>
+
 </html>
