--- a/JavaScriptElearning/WebContent/default.css
+++ b/JavaScriptElearning/WebContent/default.css
@@ -221,21 +221,21 @@ body{
 
 .nav-tabs > li.active > a{
 	color: #ffffff;
-	background-color: #00707F;
+	background-color: #5AA3AC;
 	border: none;
 	border-radius: 0;
 }
 
 .nav-tabs > li.active > a:focus{
 	color: #ffffff;
-	background-color: #00707F;
+	background-color: #5AA3AC;
 	border: none;
 	border-radius: 0;
 }
 
 .nav-tabs > li.active > a:hover{
 	color: #ffffff;
-	background-color: #00707F;
+	background-color: #5AA3AC;
 	border: none;
 	border-radius: 0;
 }
