--- a/JavaScriptElearning/WebContent/view/home.html
+++ b/JavaScriptElearning/WebContent/view/home.html
@@ -3,9 +3,11 @@
 	<banner-directive name="banner.jpg"></banner-directive>
 	<div class="panel-default text-center">
 		<h1>E-learning</h1>
+		<h2>Platforma e-learningowa do nauki JavaScript</h2>
+		<h2>Uwzgldniajca emocje uzytkownika</h2>
 		<p>Witam</p>
 		<p>Strona ta dedykowana jest nauce języków programowania, to co czyni ją inną od innych tego typu stron jest dodatkowe rozpoznawanie emocji uczestnika kursu.</p>
-		<p>Podczas rozwiązywania zadań aplikacja pobiera informacje o dynamice naciskania klawiszy oraz ruchów myszy. Na tej podstawie wyznaczane są
-			emocje, które mają wpływ na efektywnośc procesu nauczania. </p>
+		<p>Podczas rozwiązywania zadań aplikacja pobiera informacje o dynamice naciskania klawiszy oraz ruchów myszy oraz ankiety dotyczace towarzyszacy emocjom. Na tej podstawie wyznaczane są
+			metryki na podstawie których aplikacja odgaduje emocje. Informacje dotyczace emocji sa wysyłane naserwer po wypełnieniu ankiety. Ankiety sa pokazywane na koniec bloku lekcj.</p>
 	</div>
 </html>
