--- a/JavaScriptElearning/WebContent/view/login.html
+++ b/JavaScriptElearning/WebContent/view/login.html
@@ -2,7 +2,7 @@
 	<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
 	<form class="col-sm-12 text-center">
 		<p class="row">
-			Name:
+			E-Mail:
 		</p>
 		<p class="row">
 			<input type="text" ng-model="name"></input>
