--- a/JavaScriptElearning/WebContent/view/modalFormContent.html
+++ b/JavaScriptElearning/WebContent/view/modalFormContent.html
@@ -8,33 +8,33 @@
    <h5 class="text-center">Znudzenie</h5>
    <div class="btn-group text-center">
    		<label class="btn btn-success" ng-model="boredom" uib-btn-radio="'No'">Nie</label>
-        <label class="btn btn-success" ng-model="boredom" uib-btn-radio="'No'">Raczej nie</label>
+        <label class="btn btn-success" ng-model="boredom" uib-btn-radio="'NoRather'">Raczej nie</label>
         <label class="btn btn-success" ng-model="boredom" uib-btn-radio="'Neutral'">Neutralnie</label>
-        <label class="btn btn-success" ng-model="boredom" uib-btn-radio="'Yes'">Raczej tak</label>
+        <label class="btn btn-success" ng-model="boredom" uib-btn-radio="'YesRather'">Raczej tak</label>
         <label class="btn btn-success" ng-model="boredom" uib-btn-radio="'Yes'">Tak</label>
     </div>
 	<h5 class="text-center">Dezorientacja</h5>
 	<div class="btn-group ">
 		<label class="btn btn-success" ng-model="confusion" uib-btn-radio="'No'">Nie</label>
-        <label class="btn btn-success" ng-model="confusion" uib-btn-radio="'No'">Raczej nie</label>
+        <label class="btn btn-success" ng-model="confusion" uib-btn-radio="'NoRather'">Raczej nie</label>
         <label class="btn btn-success" ng-model="confusion" uib-btn-radio="'Neutral'">Neutralnie</label>
-        <label class="btn btn-success" ng-model="confusion" uib-btn-radio="'Yes'">Raczej tak</label>
+        <label class="btn btn-success" ng-model="confusion" uib-btn-radio="'YesRather'">Raczej tak</label>
         <label class="btn btn-success" ng-model="confusion" uib-btn-radio="'Yes'">Tak</label>
     </div>
     <h5 class="text-center">Zaangażowanie</h5>
 	<div class="btn-group text-center">
         <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'No'">Nie</label>
-        <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'No'">Raczej nie</label>
+        <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'NoRather'">Raczej nie</label>
         <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'Neutral'">Neutralnie</label>
-        <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'Yes'">Raczej tak</label>
+        <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'YesRather'">Raczej tak</label>
         <label class="btn btn-success" ng-model="engaged" uib-btn-radio="'Yes'">Tak</label>
     </div>
     <h5 class="text-center">Frustracja</h5>
 	<div class="btn-group text-center">
 		<label class="btn btn-success" ng-model="frustration" uib-btn-radio="'No'">Nie</label>
-        <label class="btn btn-success" ng-model="frustration" uib-btn-radio="'No'">Raczej nie</label>
+        <label class="btn btn-success" ng-model="frustration" uib-btn-radio="'NoRather'">Raczej nie</label>
         <label class="btn btn-success" ng-model="frustration" uib-btn-radio="'Neutral'">Neutralnie</label>
-        <label class="btn btn-success" ng-model="frustration" uib-btn-radio="'Yes'">Raczej tak</label>
+        <label class="btn btn-success" ng-model="frustration" uib-btn-radio="'YesRather'">Raczej tak</label>
         <label class="btn btn-success" ng-model="frustration" uib-btn-radio="'Yes'">Tak</label>
     </div>
     </div>
