--- a/JavaScriptElearning/WebContent/view/admin.html
+++ b/JavaScriptElearning/WebContent/view/admin.html
@@ -1,13 +1,16 @@
-<input type="number" ng-model="userId"></input>
-<button ng-click="prepareModel()" >SaveModel</button>
-
-<input type="number" ng-model="userId"></input>
-<input type="text" ng-model="userData"></input>
-<button ng-click="getUserModel()" >GetUserModel</button>
-
-<h5 class="text-center">Czy zbieranie danych?</h5>
-<div class="btn-group text-center">
-	<label class="btn btn-success" ng-model="isCollectMode" uib-btn-radio="true">true</label>
-    <label class="btn btn-success" ng-model="isCollectMode" uib-btn-radio="false">false</label>
+<div ng-init="init()">
+	<input type="number" ng-model="userId"></input>
+	<button ng-click="prepareModel()" >SaveModel</button>
+	
+	<input type="number" ng-model="userId"></input>
+	<input type="text" ng-model="userData"></input>
+	<button ng-click="getUserModel()" >GetUserModel</button>
+	
+	
+	<div class="btn-group text-center">
+		<h5 class="text-center">Czy zbieranie danych?</h5>
+		<label class="btn btn-success" ng-model="isCollectMode" uib-btn-radio="true">true</label>
+	    <label class="btn btn-success" ng-model="isCollectMode" uib-btn-radio="false">false</label>
+	</div>
+	<button ng-click="setMode()" >Set mode</button>		
 </div>
-<button ng-click="setMode()" >Set mode</button>		
