--- a/JavaScriptElearning/WebContent/view/PredictionModal.html
+++ b/JavaScriptElearning/WebContent/view/PredictionModal.html
@@ -2,7 +2,7 @@
 <div class="modal-header">
   <h1 class="text-center">Emocje towarzysz¹ce rozwi¹zywaniu zadañ</h1>
 </div>'
-<div class="modal-body">
+<div class="modal-body" ng-init="init();">
   <span ng-bind="message"></span>
 </div>
 <div class="modal-footer">
