--- a/JavaScriptElearning/WebContent/view/PredictionModal.html
+++ b/JavaScriptElearning/WebContent/view/PredictionModal.html
@@ -1,6 +1,6 @@
 
 <div class="modal-header">
-  <h1 class="text-center">Emocje towarzysz¹ce rozwi¹zywaniu zadañ</h1>
+  <h1 class="text-center">Emocje towarzyszace rozwiazywaniu zadaÅ„</h1>
 </div>'
 <div class="modal-body" ng-init="init();">
   <span ng-bind="message"></span>
