--- a/JavaScriptElearning/WebContent/view/admin.html
+++ b/JavaScriptElearning/WebContent/view/admin.html
@@ -1,6 +1,7 @@
 <div ng-init="init()">
 	<input type="number" ng-model="userId"></input>
 	<button ng-click="prepareModel()" >SaveModel</button>
+	<button ng-click="prepareQuizModel()" >SaveQuizModel</button>
 	
 	<input type="number" ng-model="userId"></input>
 	<input type="text" ng-model="userData"></input>
